Fix select options from flying around and the options from not being aligned.

--- a/public/less/branding/select.less
+++ b/public/less/branding/select.less
@@ -73,7 +73,7 @@
               text-align: right;
           }
           li {
-              text-indent: 9px;
+              text-indent: 5px;
               padding: 6px;
               height: 20px;
               line-height :  22px;
